
2010-??-?? CLAM 1.4.1 SVN $Revision$
 * Dependencies:
   * xerces-c 2.8 -> xerces-c 3.0 (requires pkg-config file)
 * Removed some deprecated symbols
   * enum EFFTType
   * Untemplatized ComplexTmpl/PolarTmpl -> Complex/Polar
 * NetworkPlayers and backends
   * Network backends for plugins are NetworkPlayers now
   * Common Backend code to inspect the network moved to base NetworkPlayer
 * OfflinePlayer accepts a control sequence script, containing in each line: 
   SMPTE controlSourceName and value.
 * Added In/OutControl/PortBase::SetName to be able to change the name of a 
   connection without disconnecting it.
 * New plugins:
   * Expression: Tranforms float control values using functions in C-like syntax.
 * Examples:
   * TickExtractor fixed assert failures when using in controls as out controls
   * TickExtractor now depends on libsamplerate instead of the ancient 
     unavailable libresample 0.13 that had to be included in the sources.

2010-03-05 CLAM 1.4.0
'3D molluscs in the space release'
 * SVN Revision: 14035
 * New controls:
   * Typed controls: Controls with other type than floats.
   * Regular in controls have callback (deprecates InControlTmpl)
   * Example processings using boolean and MIDI controls
   * MIDI module handling MIDIMessage controls
 * Processing type metadata:
   * Icons
   * Relations to a token type as sink, source or monitor
   * Relations to a control type as sink, source, sender or display
   * Binary (executable or library) where the processing is defined in.
 * Rich data types: although you can use any C++ data type as data token
   or control without explicit declaring it, you can add properties, such 
   as connector color or a display name by defining a ProcessingDataPlugin.
 * NetworkPlayers (backends):
   * Pause state: not playing the network but feeding silence to the backend
   * Multiport sources and sinks supported
   * Buffer audio sources and sinks (vs. stream audio, which is still available)